@@ -5,6 +5,11 @@ dpf-ax changelog
 
 Wed, 17 Oct 2012
        by superelchi
+       * New model:
+         - sevendayshop_pebble (thx daveg).
+
+Wed, 17 Oct 2012
+       by superelchi
        * Added contrast support info to knowntypes.html.
 
 Thu, 16 Oct 2012
